--- a/less/less.style2.css
+++ b/less/less.style2.css
@@ -25,7 +25,7 @@ a {
   background-color: #fff;
   overflow: hidden;
 }
-.nav {
+.lab-2 .nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -34,7 +34,7 @@ a {
   padding: 0 30px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.24);
 }
-.nav__theme {
+.lab-2 .nav__theme {
   outline: none;
   border: none;
   padding: 8px 20px;
@@ -42,29 +42,29 @@ a {
   border-radius: 7px;
   cursor: pointer;
 }
-.nav__theme:active {
+.lab-2 .nav__theme:active {
   box-shadow: inset 0 0 20px -3px rgba(0, 0, 0, 0.6);
 }
-.nav__menu {
+.lab-2 .nav__menu {
   display: flex;
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.nav__item {
+.lab-2 .nav__item {
   display: flex;
   align-items: center;
   height: 70px;
   padding: 0 15px;
 }
-.nav__item:hover {
+.lab-2 .nav__item:hover {
   background-color: #b61b17;
 }
-.nav__link {
+.lab-2 .nav__link {
   font-size: 17px;
   color: #fff;
 }
-.nav__link:hover {
+.lab-2 .nav__link:hover {
   font-size: 19px;
 }
 .main {
